# private-assistant-climate-skill-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Containerfile  README.md  pyproject.toml  template.yaml
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: container-build-pr.yml  docker-build-action.yml  python_code_quality.yml
integration/: __init__.py
src/private_assistant_climate_skill/: __init__.py  climate_skill.py  main.py  models.py
src/private_assistant_climate_skill/templates/: __init__.py  help.j2  set_temperature.j2
tests/: test_climate_skill.py  test_config.py  test_integration.py  test_models.py  test_templates.py
