[tool.poetry]
name = "private-assistant-climate-skill"
version = "0.1.5"
description = "Climate Control Skill for Private Assistant: Enables automated and voice-activated climate control within smart home environments."
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "GNU GPLv3"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.8.2"
homeassistant-api = "^4.2.2.post1"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
private-assistant-commons = "^0.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
mypy = "^1.11.1"
pytest = "^8.3.2"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.scripts]
private-assistant-climate-skill = "private_assistant_climate_skill.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
